<?xml version="1.0"?>
<package format="2">
  <name>state_estimator</name>
  <version>0.0.0</version>
  <description>The state_estimator package</description>

  <author email="zhuhai11@nudt.edu.cn">Hai Zhu</author>
  <maintainer email="zhuhai11@nudt.edu.cn">Hai Zhu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
